# LegiVellum

./: # LegiVellum — The Misuse Codex.txt  ## The Rite of the Living Substrate.txt  .env.example  .gitignore  CODE_REVIEW.md  DEPLOYMENT.md  Gate v1 Exit Criteria Template.txt  LegiVellum Integration Lock Spec v0.txt  LegiVellum — The Living Spec.txt  LegiVellum_Whitepaper.md  README.md  SPEC_COMPLIANCE_REPORT.md  Updated Specifications for LegiVell.txt  WORKER_QUICKSTART.md  docker-compose.yml  mcp-config.example.json  pyproject.toml  pytest.ini  requirements-dev.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
.standalone_code/InterView/: InterView Spec v0.txt
components/: DEPRECATED.md
components/asyncgate/: Dockerfile  README.md  fly.toml
docs/: COmposition Invariants Spec.txt  README.md  RFC-0001.txt  RFC-000X Unsupported topologies.txt  architecture.md  composition-invariants.md  receipt_spine_hardening_summary.md  vellum-integration.md
problemata_demo/: .env.example  README.md  demo_client.py  docker-compose.yml  escalation_path.py  golden_path.py  seed_metagate.py
schema/: init.sql  plans.sql  receipts.sql  tasks.sql
shared/: README.md  pyproject.toml
shared/legivellum/: __init__.py  auth.py  database.py  models.py  problemata_validation.py  validation.py
shared/legivellum/observability/: README.md  __init__.py  prometheus.py
spec/: LegiVellum Decisions List.txt  Receipt schema draft.txt  asyncgate.lease.md  memorygate_receipt_store.md  receipt.indexes.sql  receipt.rules.md  receipt.schema.v1.json  receipt_protocol.md  vellum.spec.md
tests/: README.md  conftest.py  test_asyncgate.py  test_delegate.py  test_memorygate.py  test_models.py  test_validation.py
tools/: validate_all_examples.py  validate_receipt.py
(+118 files in other folders)
