[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legivellum"
version = "0.1.0"
description = "LegiVellum shared models and test helpers"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "ulid-py>=1.1.0",
    "jsonschema>=4.21.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-env>=0.8.0",
    "pytest-timeout>=2.1.0",
    "httpx>=0.24.0",
    "respx>=0.20.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "jsonschema>=4.21.1",
    "ipython>=8.14.0",
    "ipdb>=0.13.13",
    "python-dotenv>=1.0.0",
    "faker>=18.0.0",
    "freezegun>=1.2.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
]

[tool.setuptools]
package-dir = {"" = "shared"}

[tool.setuptools.packages.find]
where = ["shared"]
include = ["legivellum*"]
