[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "legivellum"
version = "0.1.0"
description = "LegiVellum shared library - receipt models, validation, and utilities"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Technomancy Laboratories" }
]
dependencies = [
    "pydantic>=2.0.0",
    "python-ulid>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.109.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["legivellum"]
